# praful_coder_portfolio

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  README.rst  db.sqlite3  docker-compose.dev.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: main.yml  pr.yml
blog/: urls.py  views.py
coderpanel/: apps.py  urls.py  views.py
coderpanel/templates/coderpanel/: dashboard.html  login.html
coderpanel/templates/coderpanel/aboutSectionTitle/: showAboutSectionTitle.html
coderpanel/templates/coderpanel/portfolioSection/: editPortfolio.html
coderpanel/templates/coderpanel/roleNameSection/: showRoleName.html
coderpanel/templates/coderpanel/shortIntro/: showShortIntro.html
myportfolio/: manage.py
myportfolio/core_apps/portfolio/: admin.py  apps.py  views.py
myportfolio/core_apps/portfolio/migrations/: 0001_initial.py  0002_rename_id_aboutsectiontitlemodel_pkid_and_more.py
myportfolio/core_apps/portfolio/templates/: about.html  blogSection.html  contact.html  counter.html  highlight.html  navbar.html  projects.html  resume.html  technologies.html
myportfolio/myportfolio/: asgi.py  decorators.py  urls.py  wsgi.py
myportfolio/myportfolio/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py
myportfolio/myportfolio/settings/template/: settings.dev.py  settings.github.py
portfolio/: admin.py  models.py  urls.py  views.py
portfolio/templates/portfolio/: index.html
praful_coder_portfolio/: asgi.py  decorators.py  settings.py  urls.py  wsgi.py
scripts/: entrypoint.sh
src/: manage.py
src/core_apps/portfolio/: apps.py  models.py  views.py
src/core_apps/portfolio/migrations/: 0001_initial.py
src/core_apps/portfolio/templates/: about.html  blogSection.html  counter.html  footer.html  highlight.html  hireMeSection.html  navbar.html  projects.html  resume.html  services.html
src/myportfolio/: urls.py
src/myportfolio/settings/: __init__.py  base.py  docker.py  envvars.py
src/myportfolio/settings/template/: settings.dev.py
src/utils/: general.py
staticfiles/coderpanel/js/: demo.js  setting-demo.js
staticfiles/fonts/flaticon/font/: _flaticon.scss
staticfiles/green-horizontal/css/: responsive.css  themesaller-forms.css
staticfiles/green-horizontal/css/code-editor/: ambiance.css  codemirror.css
staticfiles/green-horizontal/css/color-picker/: farbtastic.css
staticfiles/green-horizontal/css/dialog/: sweetalert2.min.css
staticfiles/green-horizontal/css/dropzone/: dropzone.css
staticfiles/green-horizontal/js/: tawk-chat.js
templates/: about.html  contact.html  footer.html  highlight.html  hireMeSection.html  layout.html  technologies.html
templates/coderpanel/: customtemplatecontrol.html  footer.html  layout.html  mainheader.html  sidebar.html
(+40 files in other folders)
