[tool.poetry]
name = "myportfolio"
version = "0.1.0"
description = ""
authors = ["Praful Patekar <prafulpatekar23@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "myportfolio" }]


[tool.poetry.dependencies]
python = ">=3.10"
django = "^5.1.4"
whitenoise = "^6.8.2"
psycopg2 = "^2.9.10"
gunicorn = "^23.0.0"
pillow = "^11.0.0"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.2"
colorlog = "^6.9.0"
django-cors-headers = "^4.6.0"
django-filter = "^24.3"
django-storages = "^1.14.4"
pydantic = "^2.10.3"
boto3 = "^1.35.76"
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"
pytest-django = "^4.9.0"
model-bakery = "^1.20.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
python-dotenv = "^1.0.1"
pre-commit = "^4.0.1"
django-debug-toolbar = "^4.4.6"
pytest = "^8.3.4"
pytest-django = "^4.9.0"
model-bakery = "^1.20.0"
pytest-xdist = "^3.6.1"

[tool.isort]
multi_line_output = 5
line_length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "myportfolio.myportfolio.settings"
django_find_project = false
python_files = "test_*.py"
testpaths = ["myportfolio"]
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 120
dedent_closing_brackets = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
